Aggiorna configurazioni, .gitignore, aggiungi CSS custom e logo PNG Montagna Servizi

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=MontFlow
 APP_ENV=local
 APP_KEY=base64:RZFUSBoZtfWB+oZktSSfJ8qtd1cuez8VSZytGnwkH/g=
 APP_DEBUG=true
@@ -63,3 +63,4 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+NOVA_LICENSE_KEY=bmTxpw7uUohIvUaGSF2SEmH80p4v2GIgc6Fx4fgbEipKexJoPH
