feat: add APP_VERSION configuration for custom footer
- Add APP_VERSION environment variable to .env
- This allows customizing the application version displayed in Nova footer
- Version can be easily updated for each release

--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=base64:RZFUSBoZtfWB+oZktSSfJ8qtd1cuez8VSZytGnwkH/g=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_VERSION='XXX'
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
