feat: implement advanced .env file management system
- Add .env.local for local development configuration
- Add .env.prod for production overrides
- Create setup_env.sh script for local environment setup
- Update deploy.sh to handle .env files in production
- Remove .env from version control
- Update .gitignore to exclude .env and .env.backup.*
- Add comprehensive documentation in ENV_MANAGEMENT.md
- Update scripts documentation and help

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@ composer.phar
 # Backup database
 /db_backups/
 
+# Environment files
+.env
+.env.backup.*
+
 # macOS system files
 .DS_Store
 **/.DS_Store
