--- a/.env.local
+++ b/.env.local
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:RZFUSBoZtfWB+oZktSSfJ8qtd1cuez8VSZytGnwkH/g=
 APP_DEBUG=true
 APP_URL=http://localhost
-APP_VERSION=1.2.0 (2025-06-29)
+APP_VERSION='1.2.0 (2025-06-29)'
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
